--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <title>Viet-Phuong's personal site</title>
   </head>
   <body>
-    <img src="phuoongtranpp.png" alt="Viet-Phuong profile picture">
-    <h1>Viet-Phuong TRAN</h1>
-    <p><em>MSc Marketing Digital student at <strong><a href="https://masters.inseec.com/">INSEEC MSc & MBA Paris</a></strong></em></p>
-    <p>I am passionate about marketing strategies and I am eager to learn and develop my potential to succeed in my future career.</p>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="phuoongtranpp.png" alt="Viet-Phuong profile picture"></td>
+        <td><h1>Viet-Phuong TRAN</h1>
+        <p><em>MSc Marketing Digital student at <strong><a href="https://masters.inseec.com/">INSEEC MSc & MBA Paris</a></strong></em></p>
+        <p>I am passionate about marketing strategies and I am eager to learn and develop my potential to succeed in my future career.</p></td>
+      </tr>
+    </table>
+
+
     <hr>
     <h3>Education</h3>
     <ul>
@@ -38,14 +44,20 @@
 
     </table>
     <h3>Skills</h3>
-    <table>
+    <table cellspacing="10">
       <tr>
-        <td>Web development &#11088;&#11088;&#11088;&#11088;&#11088;</td>
-        <td>Communication &#11088;&#11088;&#11088;&#11088;&#11088;</td>
+        <td>Web development</td>
+        <td>⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>Customer service &#11088;&#11088;&#11088;&#11088;&#11088;</td>
-        <td>Digital marketing &#11088;&#11088;&#11088;&#11088;</td>
+        <td>Communication </td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+        <td>Customer service</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      <tr>
+        <td>Digital marketing</td>
+        <td>⭐️⭐️⭐️⭐️</td>
       </tr>
     </table>
     <hr>
@@ -53,3 +65,4 @@
   <h3><a href="contact-me.html">Contact</a></h3>
   </body>
 </html>
+
