--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li>9/2020 - 9/2022: MSc Marketing Digital at INSEEC MSc & MBA Paris</li>
       <li>9/2016 - 6/2019: Bachelors Economics anf Business Management at Rennes 1 University</li>
     </ul>
-    <h3>Work Experiences</h3>
+    <h3>Work Experience</h3>
     <table>
       <thead>
         <tr>
