--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li>9/2016 - 6/2019: Bachelors Economics anf Business Management at Rennes 1 University</li>
     </ul>
     <hr>
-    <h3>Work Experience</h3>
+    <h3>Work Experiences</h3>
     <table>
       <thead>
         <tr>
@@ -64,7 +64,6 @@
     </table>
     <hr>
     <h3><a href="hobbies.html">My Hobbies</a></h3>
-  <h3><a href="Contact-me.html">Contact</a></h3>
+  <h3><a href="contact-me.html">Contact</a></h3>
   </body>
 </html>
-
